# tf2_book_exercises

./: README.md  pyproject.toml
basic_mnist/: .training_workflow.py.swp  models.py  requirements.txt  training_workflow.py
