[tool.poetry]
name = "tf2_book"
version = "0.1.0"
description = ""
authors = ["Scott <spowers.42@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
metaflow = "^2.5.4"
tensorflow = "^2.8.0"
black = "^22.3.0"
ipython = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
